# tiny-ko

./: .gitignore  00-tknz.py  01-preprocess.py  02-train.py  README.md  axolotl-docker.sh  chat.py  cpt.yaml  dataset.ipynb  fft-tiny.yaml  gemini-train.py  generate.py  ko-dpo.yaml  ko-inst-2.yaml  ko-inst-tool.yaml  ko-inst.yaml  ko-tiny.yaml  main.py  model-exp.ipynb  moonlight-muon-train.py  muon_optimizer.py  pose.yaml  preprocess.py  pretrain_llama_with_packing.py  pyproject.toml  test-collator.py  test-data.py  test-pack-collator.py  test-tknz.py  test.axolotl.yaml  test.py  test_masking_utils.py  tiny-llama.ipynb  tknz-eval.py  tknz.py  train.py  trl-pack.py
axolotl-cuda128-docker/: Dockerfile  README.md
datasets/: gpu-test.py  ray-test.py
pretrain-datasets/: dataset-mix.ipynb  gpu-test.py  ray-test.py
pretrain-datasets/fineweb-2-edu-korean/: .gitignore  README.txt  fineweb-2-edu-korean.ipynb  fineweb-2-edu-korean.py  postprocessing.ipynb  test-notebook.ipynb
pretrain-datasets/geulgyeol-blog-korean/: geulgyeol-blog.korean.ipynb
