[project]
name = "mirco-ko-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "hf-transfer>=0.1.9",
    "ipykernel>=6.29.5",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
