[project]
name = "tiny-ko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "flash-attn>=2.8.1",
    "gpustat>=1.1.1",
    "hanja>=0.15.1",
    "hf-transfer>=0.1.9",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "liger-kernel>=0.6.0",
    "lm-eval>=0.4.9",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "protobuf>=6.31.1",
    "scikit-learn>=1.7.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "trl>=0.18.1",
    "wandb>=0.20.1",
]
